tests/valid/test_array_56.wyal
assert "postcondition not satisfied":
    forall (int[] ls):
        if:
            ls == [0,0]
        then:
            ls == [0;2]
