tests/invalid/test_023.wyal
assert "postcondition not satisfied":
    forall (int[] ls):
        if:
            |ls| == 0
        then:
            ls == [1,2,3]